[package]
name = "dutchdutch-ascend"
version = "0.1.0"
edition = "2021"
authors = ["Dutch and Dutch"]
description = "Rust library for controlling Dutch and Dutch Ascend networked speakers"
license = "MIT"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
ratatui = "0.27"
crossterm = "0.27"
